# mistyai

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json
docs/: security-notes.md
local-voice/: README.md  requirements.txt  wakeword-server.py
local-voice/models/: Misty.onnx
public/openwakeword/: README.md
scripts/: start-misty.ps1
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppSidebar.tsx  CommandPalette.tsx  CreateItemDialog.tsx  DeleteConfirmDialog.tsx  DropdownSelect.tsx  FloatingOrb.tsx  ShaderBackground.tsx  SpotifyIntegration.tsx  SpotifyPlaybackBridge.tsx  dotted-surface.tsx  misty-startup-sequence.tsx
src/lib/: assistant-intents.ts  assistant-settings.ts  assistant-store.ts  chat-storage.ts  constants.ts  desktop-launcher.ts  logger.ts  model-settings.ts  spotify-commands.ts  spotify-player.ts  spotify.ts  use-voice.ts
src/routes/: __root.tsx  app.analytics.tsx  app.calendar.tsx  app.chat.tsx  app.dashboard.tsx  app.health.tsx  app.journal.tsx  app.memory.tsx  app.notes.tsx  app.projects.tsx  app.settings.tsx  app.tasks.tsx  app.tsx  callback.tsx  index.tsx
src/types/: speech-recognition.d.ts
supabase/migrations/: 00000000000000_user_profiles.sql  00000000000001_core_schema.sql  00000000000002_ai_schema.sql  00000000000003_realtime_voice.sql  00000000000004_advanced_memory.sql  00000000000005_memory_rpc.sql  00000000000006_final_schemas.sql  00000000000007_realtime_expansion.sql  (+9 more)
(+56 files in other folders)
